--- a/Movies-ETL.ipynb
+++ b/Movies-ETL.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 204,
    "id": "9c50bad3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Dependencies\n",
+    "from config import db_password\n",
     "import json\n",
     "import numpy as np\n",
     "import os\n",
     "import pandas as pd\n",
-    "import re\n"
+    "import re\n",
+    "from sqlalchemy import create_engine\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9c8d778",
+   "id": "4627ee4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "edc04c05",
+   "id": "ed6eca34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "c25864f3",
+   "id": "c7ea17c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df56b723",
+   "id": "e0c52758",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c7e3f2f",
+   "id": "6fca6780",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "7662bae1",
+   "id": "c70650d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1552,7 +1554,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a2d2b028",
+   "id": "9654980a",
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d415693",
+   "id": "3a363d47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1598,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f4d710a1",
+   "id": "91fdcd75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1609,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "2329b26b",
+   "id": "eb9369ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "401d5345",
+   "id": "089c5534",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "a8ee1f4f",
+   "id": "bdd051e4",
    "metadata": {},
    "outputs": [
     {
@@ -1662,7 +1664,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "d8d13c7d",
+   "id": "f11ecc8e",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1727,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c97c9bd2",
+   "id": "9bc7f018",
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ada9a7a2",
+   "id": "7affc578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1797,7 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "18bd002f",
+   "id": "225725cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1808,7 +1810,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "0dd313c3",
+   "id": "d1ca4352",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1819,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "052a3308",
+   "id": "72cf857f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "fe6efd7e",
+   "id": "c5a07f65",
    "metadata": {},
    "outputs": [
     {
@@ -1940,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b4856b3c",
+   "id": "dcd90f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1951,7 +1953,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2ca2f0a9",
+   "id": "1159607d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1962,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "e7e70f14",
+   "id": "1f095cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1973,7 +1975,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "55892c64",
+   "id": "25d215a6",
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2008,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "3e99ce76",
+   "id": "7b3b70e3",
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "ccb58875",
+   "id": "e4884dc0",
    "metadata": {},
    "outputs": [
     {
@@ -2059,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7c64d655",
+   "id": "ec93931a",
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2082,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "380087b4",
+   "id": "181b448e",
    "metadata": {},
    "outputs": [
     {
@@ -2118,7 +2120,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "f2f5986b",
+   "id": "c39b35a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2128,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "33f12a6b",
+   "id": "b4fef8c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2138,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "44d5c2d7",
+   "id": "cf486be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2148,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "786d9d27",
+   "id": "89e55713",
    "metadata": {},
    "outputs": [
     {
@@ -2181,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "40e62ae9",
+   "id": "258210fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2194,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "15d323a7",
+   "id": "98cdc656",
    "metadata": {},
    "outputs": [
     {
@@ -2238,7 +2240,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "66c84701",
+   "id": "a1ec52f3",
    "metadata": {},
    "outputs": [
     {
@@ -2415,7 +2417,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1158342e",
+   "id": "669bd37e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2426,7 +2428,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "c9eab287",
+   "id": "1bac52a8",
    "metadata": {},
    "outputs": [
     {
@@ -2472,7 +2474,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "78d3011a",
+   "id": "b36b2d4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2489,7 +2491,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "6d7ace8a",
+   "id": "2d82cbf9",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2514,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "f21f580d",
+   "id": "2dda0de1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2525,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "9e07162f",
+   "id": "035d3ac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2536,7 +2538,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "b6ef3d9f",
+   "id": "499ec26c",
    "metadata": {},
    "outputs": [
     {
@@ -2573,7 +2575,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "2e8c0ad4",
+   "id": "4cba6a0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2584,7 +2586,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "045e6fe2",
+   "id": "233a95b2",
    "metadata": {},
    "outputs": [
     {
@@ -2628,7 +2630,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "aee011f1",
+   "id": "bbee4805",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2639,7 +2641,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "7f302ae1",
+   "id": "d356a3d2",
    "metadata": {},
    "outputs": [
     {
@@ -2701,7 +2703,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "f4d10d7a",
+   "id": "ac5cce5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2722,7 +2724,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "fb4f55d7",
+   "id": "9d4d4ac3",
    "metadata": {},
    "outputs": [
     {
@@ -2855,7 +2857,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "42d0b934",
+   "id": "ff66217d",
    "metadata": {},
    "outputs": [
     {
@@ -2929,7 +2931,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "7fb1c5aa",
+   "id": "0dee65a6",
    "metadata": {},
    "outputs": [
     {
@@ -2963,7 +2965,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "8c7af21c",
+   "id": "b79e79c3",
    "metadata": {},
    "outputs": [
     {
@@ -2997,7 +2999,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "80be276a",
+   "id": "2ce9b26e",
    "metadata": {},
    "outputs": [
     {
@@ -3044,7 +3046,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "7f102c71",
+   "id": "b6e4e261",
    "metadata": {},
    "outputs": [
     {
@@ -3078,7 +3080,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "f1025e15",
+   "id": "21ac5d78",
    "metadata": {},
    "outputs": [
     {
@@ -3196,7 +3198,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "a48213c8",
+   "id": "ac5d1f5e",
    "metadata": {},
    "outputs": [
     {
@@ -3218,7 +3220,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "8fb58373",
+   "id": "634e287f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3229,7 +3231,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "3ab369ce",
+   "id": "69e5a2b6",
    "metadata": {},
    "outputs": [
     {
@@ -3706,7 +3708,7 @@
   {
    "cell_type": "code",
    "execution_count": 178,
-   "id": "11d5a56d",
+   "id": "28429c3f",
    "metadata": {},
    "outputs": [
     {
@@ -3742,7 +3744,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "738a0187",
+   "id": "2ab661a0",
    "metadata": {},
    "outputs": [
     {
@@ -3781,7 +3783,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "80fccad0",
+   "id": "e58c7561",
    "metadata": {},
    "outputs": [
     {
@@ -9864,7 +9866,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "8564621b",
+   "id": "9319923d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9875,7 +9877,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "857f6af1",
+   "id": "fdb44f38",
    "metadata": {},
    "outputs": [
     {
@@ -10368,7 +10370,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "6569c085",
+   "id": "e020113e",
    "metadata": {},
    "outputs": [
     {
@@ -10392,7 +10394,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "feeec7ee",
+   "id": "2fc2b336",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10403,7 +10405,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "e2540f2c",
+   "id": "8e2367dc",
    "metadata": {},
    "outputs": [
     {
@@ -10426,7 +10428,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "e104820b",
+   "id": "3b7038de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10442,7 +10444,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "1f2c64d2",
+   "id": "b7aa22da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10468,7 +10470,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "a2ca9252",
+   "id": "8cb0f17c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10480,7 +10482,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "a097a0e1",
+   "id": "3f40094b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10493,7 +10495,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "f8dfc2c9",
+   "id": "b0f22e18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10504,7 +10506,7 @@
   {
    "cell_type": "code",
    "execution_count": 200,
-   "id": "38080447",
+   "id": "87674038",
    "metadata": {},
    "outputs": [
     {
@@ -10775,7 +10777,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "2e473d85",
+   "id": "9701f928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10786,7 +10788,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "64e878cd",
+   "id": "504284db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10796,8 +10798,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 205,
+   "id": "55d42e89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create PostgreSQL Database Engine (Part 1)\n",
+    "db_string = f\"postgres://postgres:{db_password}@127.0.0.1:5432/movie_data\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "681689f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NoSuchModuleError",
+     "evalue": "Can't load plugin: sqlalchemy.dialects:postgres",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchModuleError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-206-1f3916105d70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create PostgreSQL Database Engine (Part 2)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mengine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcreate_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdb_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<string>\u001b[0m in \u001b[0;36mcreate_engine\u001b[1;34m(url, **kwargs)\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\sqlalchemy\\util\\deprecations.py\u001b[0m in \u001b[0;36mwarned\u001b[1;34m(fn, *args, **kwargs)\u001b[0m\n\u001b[0;32m    296\u001b[0m                         \u001b[0mstacklevel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    297\u001b[0m                     )\n\u001b[1;32m--> 298\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    299\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    300\u001b[0m         \u001b[0mdoc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__doc__\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32mNone\u001b[0m \u001b[1;32mand\u001b[0m \u001b[0mfn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__doc__\u001b[0m \u001b[1;32mor\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\sqlalchemy\\engine\\create.py\u001b[0m in \u001b[0;36mcreate_engine\u001b[1;34m(url, **kwargs)\u001b[0m\n\u001b[0;32m    520\u001b[0m     \u001b[0mu\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mplugins\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwargs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_instantiate_plugins\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    521\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 522\u001b[1;33m     \u001b[0mentrypoint\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_entrypoint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    523\u001b[0m     \u001b[0mdialect_cls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mentrypoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_dialect_cls\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mu\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    524\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\sqlalchemy\\engine\\url.py\u001b[0m in \u001b[0;36m_get_entrypoint\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    651\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    652\u001b[0m             \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdrivername\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"+\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\".\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 653\u001b[1;33m         \u001b[0mcls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mregistry\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    654\u001b[0m         \u001b[1;31m# check for legacy dialects that\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    655\u001b[0m         \u001b[1;31m# would return a module with 'dialect' as the\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\.conda\\envs\\PythonData\\lib\\site-packages\\sqlalchemy\\util\\langhelpers.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m    338\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m         raise exc.NoSuchModuleError(\n\u001b[1;32m--> 340\u001b[1;33m             \u001b[1;34m\"Can't load plugin: %s:%s\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    341\u001b[0m         )\n\u001b[0;32m    342\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNoSuchModuleError\u001b[0m: Can't load plugin: sqlalchemy.dialects:postgres"
+     ]
+    }
+   ],
+   "source": [
+    "# Create PostgreSQL Database Engine (Part 2)\n",
+    "engine = create_engine(db_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aaab6200",
+   "id": "8ceafd7a",
    "metadata": {},
    "outputs": [],
    "source": []
